# SPAM

./: CMakeLists.txt  LICENSE  README.md
cmake/: project_macros.cmake
doc/: mcts.excalidraw
mcts/: CMakeLists.txt
mcts/inc/mcts/: IRewardFunction.h  IState.h  MCTSAgent.h  MCTSLoop.h  MCTSTree.h
mcts/src/: MCTSAgent.cpp  MCTSLoop.cpp  MCTSTree.cpp
spam_view/: Readme.md  params.json  spam_view.py
takuzu/: CMakeLists.txt  README.md  Readme.md  Takuzu.cpp  Takuzu.h  main.cpp
takuzu/inc/: TakuzuAction.h  TakuzuRewardFunction.h  TakuzuState.h
takuzu/src/: TakuzuAction.cpp  TakuzuRewardFunction.cpp  TakuzuState.cpp  main.cpp
